Implemented phase 3 and phase 4 integration tests for MorphicPipeline.
Add Phase 5 and Phase 6 integration tests for dehyphenation and PDF processing

- Implemented Phase 5 tests to verify dehyphenation functionality, including hyphenated word detection, processing on sample files, and validation of hOCR structure.
- Created Phase 5 integration test to ensure dehyphenation works end-to-end, generating a searchable PDF and verifying the presence of merged words while ensuring hyphenated fragments are removed.
- Developed Phase 6 integration test to validate the complete MorphicPipeline, including initialization, PDF processing, compression, and dehyphenation application.
- Added checks for output PDF searchability and proper compression using JPEG2000.
- Included tests for processing a specific range of pages in the PDF.

--- a/config/config.json
+++ b/config/config.json
@@ -11,14 +11,26 @@
   "pdf_engines": {
     "pikepdf": {
       "rendering_mode": 3,
-      "font": "Helvetica",
-      "font_size_ratio": 0.8
+      "font_size_ratio": 0.75
+    }
+  },
+  "fonts": {
+    "_comment": "PDF Base 14 fonts - guaranteed in all PDF readers, no embedding needed",
+    "text": "Helvetica",
+    "mono": "Courier",
+    "symbol": "Symbol",
+    "_notes": {
+      "text": "General prose - maximum compatibility with RAG systems",
+      "mono": "Code blocks - standard monospace",
+      "symbol": "Math/logic symbols (Greek letters, operators, etc.)"
     }
   },
   "compression": {
     "jpeg2000": {
       "quality_layers": [50],
-      "quality_mode": "rates"
+      "quality_mode": "rates",
+      "irreversible": true,
+      "_comment": "quality_layers: higher = more compression. 50 is good balance for 600 DPI"
     },
     "jpeg": {
       "quality": 95
@@ -29,7 +41,7 @@
   },
   "processing": {
     "default_dpi": 600,
-    "temp_dir": "/tmp/morphic",
+    "temp_dir": "/var/tmp/morphic",
     "dehyphenation": {
       "enabled": true,
       "dictionary": "en_US",
